Config/K8/Ingress/todolistclient.yaml
# 
# Begin commands to execute this file using kubectl with bash
# kubectl delete services,deployments,pods,jobs -l tier=front -n ingress-basic
# kubectl apply -f todolistclient.yaml --namespace ingress-basic
# for i in {1..115}
# do
#    echo "Welcome $i times"
#    kubectl get -A svc
#    sleep 3
#    kubectl get -A pods
# done
# End commands to execute this file using kubectl with bash
# 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolistclient  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todolistclient
  template:
    metadata:
      labels:
        app: todolistclient
        app-type: ingress-demo
        tier: front
    spec:
      containers:
      - name: todolistclient
        image: siegfried01/todolistclient
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: todolistclient  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: todolistclient
    app-type: ingress-demo
    tier: front
